--- a/marxcv.tex
+++ b/marxcv.tex
@@ -22,13 +22,13 @@
 }
 
 \geometry{ % length, width and margins of document
-  body={6.5in, 10.0in},
-  left=1.0in,
+  body={7.0in, 10.0in},
+  left=0.8in,
   top=0.6in
 }
 
 \pagestyle{myheadings}
-\markright{CV / Marx} % page header
+\markright{\footnotesize CV / Marx/ Updated: \today} % page header
 \thispagestyle{empty}
 
 \usepackage{sectsty}
@@ -65,13 +65,15 @@
 
 \vspace{0in}
 
+
+
 \begin{minipage}{0.45\linewidth}
-  \href{http://www.lmu.de/}{University of Munich (LMU Munich)} \\
+  University of Munich (LMU Munich) \\
   Department of Psychology \\
   Leopoldstraße 13 \\
   80802 Munich, Germany
 \end{minipage}
-\begin{minipage}{0.45\linewidth}
+\begin{minipage}{1.45\linewidth}
   \begin{tabular}{ll}
     Email: & \href{mailto:anton.marx@psy.lmu.de}{\tt anton.marx@psy.lmu.de} \\
     Phone: & 0049 (0) 89  2180 9513 \\
@@ -80,7 +82,6 @@
   \end{tabular}
 \end{minipage}
 
-% \end{center}
 
 
 \section*{EDUCATION}
@@ -188,16 +189,30 @@
 
 
 \section*{TRAININGS \& CERTIFICATIONS}
+\subsection*{Research Practices \& Methodology}
 \begin{itemize}
-\item 2016-2019: Video-Intervention-Therapy (VIT, George Downing), ZPP Heidelberg \& LMU Munich
-\item 06/2019: Research Data Management in Educational Research, GESIS, Cologne, Germany
+\item 07/2019: Advanced Power Analysis, Open-Science-Committee (OSC), LMU Munich, Germany
+\item 06/2019: Research Data Management, GESIS-Institute, Cologne, Germany
 \item 02/2019: Good Scientific Practices, Open-Science-Committee (OSC), LMU Munich, Germany
 \item 11/2018: Data Analysis and Data Management in R, MCLS, LMU Munich, Germany
 \item 07/2018: EU-GDPR: Data Privacy and Psychological Research, University of Frankfurt, Germany
 \item 01/2018: Academic Writing, Graduate Center, LMU Munich, Germany
-\item 02/2017: Facial Expression Analysis using the Facial-Action-Coding-System (FACS, Paul Ekman), University of Saarbrücken, Germany
+\item 02/2017: Facial Expression Analysis using the Facial-Action-Coding-System (FACS), University of Saarbrücken, Germany
+\end{itemize}
+
+\subsection*{Social Skills}
+\begin{itemize}
+\item 02/2015: Gender- \& Diversity-Competence, Gender Equality Office, LMU Munich, Germany
+\item 2014-2015: Conflict Mediator (MuCDR),  Munich Center for Dispute Resolution, Munich, Germany
+\item 08/2014: Project Management and Communication Strategies, Career Service, LMU Munich, Germany
+\end{itemize}
+
+\subsection*{Counseling \& Psychotherapeutic Interventions}
+\begin{itemize}
+\item 2016-2019: Video-Intervention-Therapy (VIT, George Downing), ZPP Heidelberg \& LMU Munich
+\item 04/2018: Structured Clinical Interviews: Using the DIPS-Children's Version, RUB Bochum \& LMU Munich, Germany
 \item 04/2016: Motivational Interviewing (MI, Miller \& Rollnick), ZPG Deggendorf, Germany
-% \item 08/2014: Project Management, Career Service, LMU Munich, Germany
+\item 2015-2016: Psychosocial Crisis Intervention \& Critical Incident Stress Management, BDP Berlin \& ASB Munich, Germany
 \end{itemize}
 
 
@@ -238,13 +253,5 @@
 \item[$\ast$] Prof. Dr. Corinna Reck, LMU Munich, Department of Psychology, \href{mailto:corinna.reck@psy.lmu.de}{\tt corinna.reck@psy.lmu.de} 
 \end{itemize}
 
-\bigskip % distance between last section and footer
-
-% Footer
-\begin{flushright}
-  \begin{footnotesize}
-    \it Updated: \today \\
-  \end{footnotesize}
-\end{flushright}
 
 \end{document}
