--- a/marxcv.tex
+++ b/marxcv.tex
@@ -151,9 +151,16 @@
 
 \section*{WORKSHOPS \& TALKS}
 \begin{itemize}
-\item Schönbrodt, F., \& {\bf Marx, A.K.G.} (2019, February). {\it Maintaining privacy with open data}. Workshop at the Open-Science-Committee (OSC), Department of Psychology, LMU Munich.
-\item {\bf Marx, A.K.G.}, \& Müller, M. (2018, October). {\it Data privacy and Data security: Introduction to the EU-GDPR}. Talk at the Psychotherapeutic Outpatient Clinic for Children and Adolescents, Department of Psychology, LMU Munich.
-\item {\bf Marx, A.K.G.} (2018, July). {\it Data privacy and Psychological Research}. Workshop at the Department of Psychology, Psychology in the Learning Sciences, LMU Munich.
+\item {\bf Marx, A. K. G.} \& Stoiber, M. (2019, July). {\it Peer counseling and intervision groups in the context of teaching}. Workshop, ALP Bayern, Dillingen a. d. Donau, Germany.
+\item {\bf Marx, A. K. G.} \& Stoiber, M. (2019, March). {\it Cognitive Behavioral Therapy (CBT) Basics: Counseling techniques and psychoeducation}. Workshop, MUNIK – Institute for Training in Psychotherapy for Children and Adolescents, LMU Munich, Germany.
+\item Schönbrodt, F., \& {\bf Marx, A. K. G.} (2019, February). {\it Maintaining privacy with open data}. Workshop at the Open-Science-Committee (OSC), Department of Psychology, LMU Munich.
+\item Stoiber, M. \& {\bf Marx, A. K. G.} (2019, January). {\it Psychosocial crisis intervention for children and adolescents}. Friedrich-von-Bodelschwingh Clinic, Berlin, Germany.
+\item Stoiber, M., Matt, L., \& {\bf Marx, A. K. G.} (2019, January). {\it Supporting students with mental health problems in school}. Workshop, ALP Bayer, Dillingen a. d. Donau, Germany.
+\item {\bf Marx, A. K. G.}, \& Müller, M. (2018, October). {\it Data privacy and Data security: Introduction to the EU-GDPR}. Talk at the Psychotherapeutic Outpatient Clinic for Children and Adolescents, Department of Psychology, LMU Munich.
+\item {\bf Marx, A. K. G.} (2018, July). {\it Data privacy and Psychological Research}. Workshop at the Department of Psychology, Psychology in the Learning Sciences, LMU Munich.
+\item Stoiber, M. \& {\bf Marx, A. K. G.} (2018, June). {\it Crisis intervention in school}. Workshop, Munich Center for Teacher Education (MZL), LMU Munich, Germany.
+\item Stoiber, M. \& {\bf Marx, A. K. G.} (2016, May). {\it Crisis intervention in school}. Workshop, Munich Center for Teacher Education (MZL), LMU Munich, Germany.
+\item Stoiber, M. \& {\bf Marx, A. K. G.} (2015, November). {\it Crisis intervention in school}. Workshop, Munich Center for Teacher Education (MZL), LMU Munich, Germany.
 \end{itemize}
 
 
