--- a/marxcv.tex
+++ b/marxcv.tex
@@ -2,6 +2,8 @@
 
 % DISCLAIMER: This template is licensed under a CC-BY 4.0 license (Creative Commons https://creativecommons.org/). You may copy, distribute, and use the LaTex code, as long as you give attribution to the original authors in the code, but not in the resulting documents (e.g. PDF files).
 
+% Source: https://github.com/mrxntn/academic_cv
+
 \documentclass[letterpaper]{article}
 
 \usepackage{hyperref}
