--- a/marxcv_short.tex
+++ b/marxcv_short.tex
@@ -72,16 +72,16 @@
 \begin{minipage}{0.45\linewidth}
   University of Munich (LMU Munich) \\
   Department of Psychology \\
-  Leopoldstraße 13 \\
+  Leopoldstraße 13 \\ 
   80802 Munich, Germany
 \end{minipage}
 \begin{minipage}{1.45\linewidth}
   \begin{tabular}{ll}
     Email: & \href{mailto:anton.marx@psy.lmu.de}{\tt anton.marx@psy.lmu.de} \\
-    Phone: & 0049 (0) 89  2180 9513 \\
-    Fax: &  0049 (0) 89  2180 72508 \\
+    Phone: & 0049 (0) 89  2180 - 9513 (Fax: - 72508)\\
     Web: & \href{https://www.psy.lmu.de/pls/people/marx/}{\tt www.psy.lmu.de/pls/people/marx} \\
-  \end{tabular}
+    Twitter: & \href{https://www.twitter.com/mrxntn/}{\tt @mrxntn} | Github: \href{https://www.github.com/mrxntn/}{\tt /mrxntn} | OSF:  \href{https://www.osf.io/z7rfu/}{\tt osf.io/z7rfu}\\
+      \end{tabular}
 \end{minipage}
 
 
@@ -133,7 +133,7 @@
 \item {\bf Marx, A. K. G.}, Frenzel, A. C., Pekrun, R., Kosovac, K., Müller, M., \& Reck, C. (2019, September). Examining teachers’ and students’ enjoyment in class using automated facial emotion recognition. Paper submitted to the Joint Conference of the DGPS-Sections Developmental Psychology and Educational Psychology (paEpsy), Leipzig, Germany.
 \item Kosovac, K., {\bf Marx, A. K. G.}, Frenzel., A. C., Pekrun, R., Müller, M., \& Reck, C. (2019, September). Self-reported attachment insecurity – Using the Vulnerable Attachment Style Questionnaire in adolescents. Paper presented at the Joint Conference of the DGPS-Sections Developmental Psychology and Educational Psychology (paEpsy), Leipzig, Germany.
 \item {\bf Marx, A. K. G. }, Frenzel, A. C., Pekrun, R., Reck, C., \& Müller, M. (2019, August). Teachers’ and learners’ emotional experiences in class: Using automated facial action coding. Paper presented at the European Association for Research on Learning and Instruction (EARLI) annual conference, Aachen, Germany.
-\item Kosovac, K., {\bf Marx, A. K. G.}, Frenzel, A. C., Pekrun, R., Müller, M., \& Reck, C. (2019, July). Attachment insecurity and emotional difficulties in adolescents. Paper presented at the International Congress of the European Society for Chilod and Adolescent Psychiatry (ESCAP), Vienna, Austria.
+\item Kosovac, K., {\bf Marx, A. K. G.}, Frenzel, A. C., Pekrun, R., Müller, M., \& Reck, C. (2019, July). Attachment insecurity and emotional difficulties in adolescents. Paper presented at the International Congress of the European Society for Child and Adolescent Psychiatry (ESCAP), Vienna, Austria.
 \item Poteat, J., {\bf Marx, A. K. G.}, \& Frenzel, A. C. (2019, June). Relationships among teachers' and students' reported and observed enjoyment in university classrooms. Paper presented at the 2nd International Conference on Children's Health, Well-being, Rights, and Education, Pristina, Kosovo.
 \item {\bf Marx, A. K. G.}, Frenzel, A. C., Reck, C., Klauser, N., Müller, M., \& Pekrun, R. (2019, April). Susceptibility to emotional contagion relates to teachers' emotions and burnout. Poster presented at the American Educational Research Association (AERA) annual conference, Toronto, Canada.
 \item Frenzel, A. C.*, {\bf Marx, A. K. G.*}, Pekrun, R., Reck, C., \& Müller, M. (2019, April). Teachers’ and Learners’ Emotional Experiences in Class: A Field-based Video Study. Paper presented at the American Educational Research Association (AERA) annual conference, Toronto, Canada.
