--- a/marxcv_short.tex
+++ b/marxcv_short.tex
@@ -22,11 +22,11 @@
 }
 
 \geometry{ % length, width and margins of document
-  body={8in, 11.69in}, % DinA4 8.27 x 11.69 inch
+  body={8in, 11in}, % DinA4 8.27 x 11.69 inch
   left=0.6in,
   right=0.4in,
   top=0.8in,
-  bottom=0.5in
+  bottom=0.6in
 }
 
 \pagestyle{myheadings}
@@ -72,9 +72,9 @@
 \begin{minipage}{1.45\linewidth}
   \begin{tabular}{ll}
     Email: & \href{mailto:anton.marx@psy.lmu.de}{\tt anton.marx@psy.lmu.de} \\
-    Phone: & 0049 (0) 89  2180 - 9513 (Fax: - 72508)\\
+    Phone: & 0049 (0) 89  2180 9513 [Fax: 0049 (0) 89 2180 72508]\\
     Web: & \href{https://www.psy.lmu.de/pls/people/marx/}{\tt www.psy.lmu.de/pls/people/marx} \\
-    Profiles: & \href{https://www.osf.io/z7rfu/}{\tt osf.io} | \href{https://www.twitter.com/mrxntn/}{\tt twitter.com} | \href{https://www.github.com/mrxntn/}{\tt github.com}
+    Profiles: & \href{https://www.osf.io/z7rfu/}{\tt osf.io} | \href{https://www.twitter.com/mrxntn/}{\tt twitter.com/mrxntn} | \href{https://www.github.com/mrxntn/}{\tt github.com/mrxntn}
       \end{tabular}
 \end{minipage}
 
@@ -92,7 +92,7 @@
 \section*{EDUCATION}
   \begin{tabular}{llll}
     Since 2016 & PhD (Dr. phil.) & Psychology & University of Munich (LMU)\\
-    2009 - 2015 & State Exam (equivalent to M.Sc.) & Schoolpsychology & University of Munich (LMU)\\
+    2009 - 2015 & State Exam (equivalent to M.Sc.) & School Psychology & University of Munich (LMU)\\
       \end{tabular}
 
 \section*{ADDITIONAL SKILLS}
@@ -140,7 +140,7 @@
 \item Emotional experiences of teachers and students in class, facial expression analysis and automated emotion recognition, research methodology and study design (quantitative research)
 \end{itemize}
 
-\subsection*{Study program “Schoolpsychology” (LMU Munich)}
+\subsection*{Study program “School Psychology” (LMU Munich)}
 \begin{itemize}
 \item Counseling techniques, motivational interviewing, psychopathology and mental disorders in children and adolescents, crisis intervention techniques, cognitive behavioral therapy (basics)
 \end{itemize}
