--- a/marxcv_short.tex
+++ b/marxcv_short.tex
@@ -110,6 +110,7 @@
 
 \subsection*{Conference Contributions}
 \begin{itemize}
+\item Frenzel, A. C., {\bf Marx, A. K. G.}, Schwartze, M., Pekrun, R., Reck, C., \& Müller, M. (2020, submitted). Emotions in the Classroom: An Automated Facial Action Coding Approach. Paper submitted to the American Psychiatric Association (APA) annual meeting, Washington, USA.
 \item {\bf Marx, A. K. G.}, Frenzel, A. C., \& Fiedler, D. (2020, submitted). Validation of a newly developed self-report measure of Susceptibility to Emotional Contagion. Paper submitted to the European Association of Social Psychology (EASP) triennial conference, Krakow, Poland.
 \item {\bf Marx, A. K. G.}, Frenzel, A. C., Pekrun, R., Kosovac, K., Müller, M., \& Reck, C. (2020, accepted). Examining enjoyment in the classroom using facial expression analysis. Poster submitted to the American Educational Research Association (AERA) annual conference, San Francisco, USA.
 \item {\bf Marx, A. K. G.}, Frenzel, A. C., Reck, C., Kosovac, K., Müller, M., \& Pekrun, R. (2019, September). Teachers’ susceptibility to emotional contagion relates to their discrete emotions and emotional exhaustion. Paper presented at the Joint Conference of the DGPS-Sections Developmental Psychology and Educational Psychology (paEpsy), Leipzig, Germany.
